force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_City__c.field-meta.xml
<CustomField>
    <fullName>Agr_City__c</fullName>
    <label>Cidade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>