force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_Complement__c.field-meta.xml
<CustomField>
    <fullName>Agr_Complement__c</fullName>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>