force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_Description__c.field-meta.xml
<CustomField>
    <fullName>Agr_Description__c</fullName>
    <formula>IF(FinServ__Account__r.IsPersonAccount = TRUE, FinServ__Account__r.FirstName + &quot; &quot; + FinServ__Account__r.LastName, FinServ__Account__r.Name) +
 IF( FinServ__Role__r.Name  = &quot;Representante&quot;, &quot; é representante de &quot;, IF(FinServ__Role__r.Name = &quot;Representado&quot;, &quot; é representado por &quot;, &quot; está relacionado à &quot;)) +
IF(FinServ__RelatedAccount__r.IsPersonAccount = TRUE, FinServ__RelatedAccount__r.FirstName + &quot; &quot; + FinServ__RelatedAccount__r.LastName, FinServ__RelatedAccount__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição</label>
    <type>Text</type>
</CustomField>