force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_District__c.field-meta.xml
<CustomField>
    <fullName>Agr_District__c</fullName>
    <label>Bairro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>