force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_FiscalResidencyAbroad__c.field-meta.xml
<CustomField>
    <fullName>Agr_FiscalResidencyAbroad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residência fiscal além da brasileira?</label>
    <type>Checkbox</type>
</CustomField>