force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_HasSecondaryCitizenship__c.field-meta.xml
<CustomField>
    <fullName>Agr_HasSecondaryCitizenship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui outra nacionalidade?</label>
    <type>Checkbox</type>
</CustomField>