force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_IsPoliticallyExposed__c.field-meta.xml
<CustomField>
    <fullName>Agr_IsPoliticallyExposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Se é PEP?</label>
    <type>Checkbox</type>
</CustomField>