force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_LinkWithAgora__c.field-meta.xml
<CustomField>
    <fullName>Agr_LinkWithAgora__c</fullName>
    <label>Tipo de Vínculo com a Ágora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administradores, funcionários, operadores e prepostos da corretora;</fullName>
            </value>
            <value>
                <fullName>Agentes autônomos</fullName>
            </value>
            <value>
                <fullName>Clubes e fundos cuja maioria das cotas pertença as pessoas citadas acima</fullName>
            </value>
            <value>
                <fullName>Cônjuges e filhos menores das pessoas anteriormente citadas</fullName>
            </value>
            <value>
                <fullName>Nenhum Vínculo</fullName>
            </value>
            <value>
                <fullName>Prestadores de serviços contratados para atividades fins da corretora</fullName>
            </value>
            <value>
                <fullName>Sócios, acionistas e sociedades controladas pela corretora, exceto Instituição Financeira</fullName>
            </value>
            <value>
                <fullName>Sócios ou acionistas da corretora, pessoas físicas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>