force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_Number__c.field-meta.xml
<CustomField>
    <fullName>Agr_Number__c</fullName>
    <label>Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>