force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Agr_PostalCode__c</fullName>
    <label>Cep</label>
    <length>20</length>
    <type>Text</type>
</CustomField>