force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_PowerType__c.field-meta.xml
<CustomField>
    <fullName>Agr_PowerType__c</fullName>
    <label>Poderes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Emitente de Ordem</fullName>
            </value>
            <value>
                <fullName>Gestor de Carteiras</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>