force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_RepresentativeType__c.field-meta.xml
<CustomField>
    <fullName>Agr_RepresentativeType__c</fullName>
    <label>Tipo de representante</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Controladora/Controlada/Coligada</fullName>
            </value>
            <value>
                <fullName>Gestor</fullName>
            </value>
            <value>
                <fullName>Pessoa Autorizada a Emitir Ordens</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
            <value>
                <fullName>Proprietario</fullName>
            </value>
            <value>
                <fullName>Representante Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Representante Pessoa Jurídica</fullName>
            </value>
            <value>
                <fullName>Responsável Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>