force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_State__c.field-meta.xml
<CustomField>
    <fullName>Agr_State__c</fullName>
    <label>Estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>