force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_Street__c.field-meta.xml
<CustomField>
    <fullName>Agr_Street__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>